# sqs-test

./: README.md  pyproject.toml
src/: .env.template  celery_app.py  email_client.py  main.py  routers.py  server.py  settings.py
src/emailservice/templates/: userreg_verification.htm
