[tool.poetry]
name = "fastsqs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["sqs"], version = "^5.3.6"}
uvicorn = "^0.24.0.post1"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
boto3 = "^1.33.1"
aioboto3 = "^12.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
